--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   rxdart: ^0.27.7
   flutter_hooks: ^0.18.6
 
+
+
+  google_fonts: ^3.0.1
+  delayed_display: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
