--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   rxdart: ^0.27.7
   flutter_hooks: ^0.18.6
+  firebase_auth: ^4.3.0
+  firebase_core: ^2.9.0
+  cloud_firestore: ^4.5.0
+  uuid: ^3.0.7
 
 
-
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.3
   delayed_display: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
